# Modern-C

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Templates/: TypeDeduction.hpp
sources/: dog.cpp
src/include/: dog.h
src/source/: dog.cpp
